--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -80,7 +80,7 @@ body {
 }
 
 .background {
-  background: rgba(0, 0, 0, 0.5) url("images/bg1.jpg");
+  background: rgba(0, 0, 0, 0.5) url("/images/bg1.jpg");
   background-size: cover;
   background-blend-mode: darken;
 }
