some changes in html and css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,6 +9,9 @@ body {
     overflow-x: hidden;
     transition: background-color 0.3s ease-in-out;
 }
+html {
+  scroll-behavior: smooth;
+}
 
 .navbar {
   display: flex;
